--- a/Shopping-Cart/Web.config
+++ b/Shopping-Cart/Web.config
@@ -11,6 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Shopping-Cart-20190618020143.mdf;Initial Catalog=aspnet-Shopping-Cart-20190618020143;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="ShoppingCartEntities" connectionString="metadata=res://*/Models.ShoppingCart.csdl|res://*/Models.ShoppingCart.ssdl|res://*/Models.ShoppingCart.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-BB1BM97\SQLEXPRESS1;initial catalog=ShoppingCart;persist security info=True;user id=sa;password=shoppingcart;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="UserEntities" connectionString="metadata=res://*/Models.User.csdl|res://*/Models.User.ssdl|res://*/Models.User.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-Shopping-Cart-20190618020143.mdf;initial catalog=aspnet-Shopping-Cart-20190618020143;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
