新增資料表 Order 及 OrderDetail 修改 OrderController 使訂單存入資料庫

--- a/Shopping-Cart/Shopping-Cart.csproj
+++ b/Shopping-Cart/Shopping-Cart.csproj
@@ -195,6 +195,12 @@
     <Compile Include="Models\ManageUser.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Operation.cs" />
+    <Compile Include="Models\Order.cs">
+      <DependentUpon>ShoppingCart.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\OrderDetail.cs">
+      <DependentUpon>ShoppingCart.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Product.cs">
       <DependentUpon>ShoppingCart.tt</DependentUpon>
     </Compile>
